fix alignment rule

--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -37,7 +37,7 @@
   @include t--header-1;
   // oh horror: typography addition
   line-height: 4.175rem;
-  bottom: 6.6rem;
+  bottom: 6.5rem;
   color: $complementary;
 }
 
